[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gomory"
version = "1.0.1"
description = "Pure Python implementation of Gomory cutting plane method for Integer Linear Programming (ILP/MILP) - Educational solver with exact arithmetic"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "vleonel-junior"}
]
keywords = [
    "gomory",
    "gomory cuts",
    "gomory cutting plane",
    "cutting plane method",
    "integer programming",
    "integer linear programming",
    "ILP",
    "MILP",
    "mixed integer programming",
    "linear programming",
    "simplex",
    "simplex method",
    "dual simplex",
    "optimization",
    "operations research",
    "combinatorial optimization",
    "exact arithmetic",
    "educational",
    "solver",
    "OR",
    "branch and cut"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Education",
    "Natural Language :: English",
    "Natural Language :: French",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/vleonel-junior/Gomory"
Documentation = "https://github.com/vleonel-junior/Gomory#readme"
Repository = "https://github.com/vleonel-junior/Gomory"

[tool.setuptools.packages.find]
where = ["."]
include = ["gomory*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
